fixed pagination for the musicdiary

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -591,6 +591,13 @@ body.dark {
     background: linear-gradient(135deg, #1e1e2f, #3e3e5e);
   }
 
+  .diary-entry{
+    background-color: linear-gradient(135deg, #1e1e2f, #3e3e5e); ;
+  }
+
+  .diary-item{
+    background: linear-gradient(135deg, #8a8a8a, #b993d6);
+  }
 
   .titleFront {
     background-color: #fff;
@@ -630,7 +637,7 @@ body.light {
   background: linear-gradient(135deg, #f3d4f3, #e2cdc4);
   color: #000 !important;
 
-  h1, h3, p {
+  h1, h3, p, h2 {
     font-family: 'Roboto', sans-serif;
     color: #000 !important;
   }
@@ -643,9 +650,17 @@ body.light {
     background-color: none;
   }
 
+  .diary-entry{
+    background: linear-gradient(135deg, #e4bae4, #e2cdc4);
+  }
+
   .like-heart, .close {
     background: linear-gradient(135deg, #f3d4f3, #e2cdc4);
     color: #000;
+  }
+
+  .diary-item{
+    background: linear-gradient(135deg, #a39595, #b993d6);
   }
 
   .menu-button {
@@ -1010,7 +1025,6 @@ p {
 .music-diary-container {
   font-family: 'Roboto', sans-serif;
   color: #fff;
-  background: linear-gradient(135deg, #1e1e2d, #2d2d44);
   min-height: 100vh;
   padding: 2rem;
   box-sizing: border-box;
@@ -1091,7 +1105,6 @@ p {
     }
 
     .diary-item {
-      background: linear-gradient(135deg, #8a8a8a, #b993d6);
       border-radius: 5px;
       margin-bottom: 1rem;
       padding: 1rem;
@@ -1111,7 +1124,7 @@ p {
 .diary-item {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 8px;
@@ -1134,7 +1147,7 @@ p {
   border-radius: 4px;
   padding: 5px;
   cursor: pointer;
-  font-size: large;
+  font-size: 14px;
   transition: background-color 0.3s;
 }
 
@@ -1142,4 +1155,24 @@ p {
 textarea {
   width: 100%;
   margin-bottom: 8px;
+  border-radius: 5px;
+}
+
+.editing-area button {
+  background: linear-gradient(135deg, #922692, #bb4180c6);
+  color: white; 
+  border: none;
+  border-radius: 4px; 
+  padding: 3px 8px; 
+  cursor: pointer; 
+  font-size: 13px; 
+  transition: background 0.3s ease;
+  margin-left: 5px;
+}
+
+.time-stamp {
+  font-size: 0.8rem;
+  color: #fff;    
+  margin-left: 5px;
+  font-weight: normal; 
 }
