--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -513,7 +513,6 @@
   width: 100%; 
   top: 0;
   left: 0;
-  z-index: 999;
 }
 
 .profile-menu {
@@ -844,13 +843,14 @@ body.light {
 
 .create-playlist-container button{
   color: #922692;
-  padding: 8px;
   font-size: 25px;
+  z-index: 30;
   font-weight: bold;
   border: none;
   border-radius: 6px;
   cursor: pointer;
   background: none;
+  margin:10px;
 }
 
 .menu-container {
